@@ -9,6 +9,7 @@
 {% block content %}
 
 <div>
+<p>Total number of games: {{total}}</p>
 <table class="stats">
 <thead>
     <tr>
